@@ -1,11 +1,11 @@
 Package: sglasso
 Type: Package
 Title: Lasso Method for RCON(V,E) Models
-Version: 1.2.3
-Date: 2018-05-26
+Version: 1.2.4
+Date: 2019-12-05
 Author: Luigi Augugliaro
 Maintainer: Luigi Augugliaro <luigi.augugliaro@unipa.it>
-Depends: Matrix, igraph, R (>= 3.2)
+Depends: Matrix, igraph, R (>= 3.6)
 Imports: methods, graphics, grDevices
 Encoding: latin1
 Description: RCON(V, E) models are a kind of restriction of the Gaussian Graphical Models defined by a set of equality constraints on the entries of the concentration matrix. 'sglasso' package implements the structured graphical lasso (sglasso) estimator proposed in Abbruzzo et al. (2014) for the weighted l1-penalized RCON(V, E) model. Two cyclic coordinate algorithms are implemented to compute the sglasso estimator, i.e. a cyclic coordinate minimization (CCM) and a cyclic coordinate descent (CCD) algorithm.
@@ -14,5 +14,5 @@ LazyLoad: yes
 URL: http://www.unipa.it/persone/docenti/a/luigi.augugliaro
 NeedsCompilation: yes
 Repository: CRAN
-Packaged: 2018-05-26 13:04:39 UTC; francesca
-Date/Publication: 2018-05-26 13:24:31 UTC
+Packaged: 2019-12-05 08:46:19 UTC; luigiaugugliaro
+Date/Publication: 2019-12-05 09:10:02 UTC
